# barber_bot

./: Cargo.toml  README.md
configuration/: base.yaml
scripts/: init_db.sh
src/: commands.rs  configuration.rs  lib.rs  main.rs  models.rs  startup.rs
src/calendar/: get_available_time_slots.rs  mod.rs
src/routes/: add_service.rs  get_service.rs  get_service_duration_by_id.rs  mod.rs  save_appointment.rs  save_user.rs
