[package]
name = "tg_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "tg_bot"


[dependencies]
actix-web = "4"
tokio = { version = "1.33.0", features = ["full"] }
uuid = { version = "1.5.0", features = ["v4", "serde"] }
sqlx = { version = "0.7.2", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
serde = { version = "1.0.189", features = ["derive"] }
teloxide = { version = "0.12.2", features = [
    "macros",
    "ctrlc_handler",
    "webhooks",
] }
serde_json = "1.0.107"
serde-aux = "4.2.0"
secrecy = { version = "0.8", features = ["serde"] }
chrono = { version = "0.4.22", default-features = false, features = [
    "clock",
    "serde",
] }
config = { version = "0.13.3", default-features = false, features = ["yaml"] }
env_logger = "0.10.0"
google-calendar3 = "*"
log = "0.4.20"
dotenv = "0.15.0"
